<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomenu"
    tools:context=".Idioma">

    <Button
        android:id="@+id/button_español"
        android:layout_width="272dp"
        android:layout_height="72dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/button"
        android:text="@string/español"
        android:textColor="#F8F5F5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_english"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_english"
        android:layout_width="267dp"
        android:layout_height="76dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button"
        android:text="@string/ingles"
        android:textColor="#F8F5F5"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_catala"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_español" />

    <Button
        android:id="@+id/button_catala"
        android:layout_width="267dp"
        android:layout_height="76dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="89dp"
        android:background="@drawable/button"
        android:text="@string/catala"
        android:textColor="#F8F5F5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_english" />
</androidx.constraintlayout.widget.ConstraintLayout>