<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondomenu"
    tools:context=".MenuPrincipal">


    <Button
        android:id="@+id/seleccionarimagen"
        android:layout_width="310dp"
        android:layout_height="78dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="101dp"
        android:background="@drawable/button"
        android:elevation="10dp"
        android:text="@string/jugar"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322"></Button>

    <Button
        android:id="@+id/halloffame"
        android:layout_width="310dp"
        android:layout_height="78dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="101dp"
        android:background="@drawable/button"
        android:elevation="10dp"
        android:text="HALL OF FAME"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473"></Button>

    <Button
        android:id="@+id/idioma"
        android:layout_width="310dp"
        android:layout_height="78dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="101dp"
        android:background="@drawable/button"
        android:elevation="10dp"
        android:text="@string/idioma"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624"></Button>

    <Switch
        android:id="@+id/musica"
        android:layout_width="258dp"
        android:layout_height="51dp"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="46dp"
        android:text="@string/musica"
        android:textColor="@color/white"
        android:textColorHighlight="#8BC34A"
        android:textColorLink="#8BC34A"
        android:textOff="OFF"
        android:textOn="ON"
        android:textSize="24sp"
        android:thumbTint="#8BC34A"
        android:trackTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:checked="false" />

    <Button
        android:id="@+id/buttonGoogle"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/btngoogle"
        android:scaleType="fitStart"
        android:text="@string/iniciar_sesi_n"
        android:textColor="#F4EFEF"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/musica"
        app:layout_constraintEnd_toStartOf="@+id/buttonLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idioma"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/btngoogle"
        android:text="@string/cerrar_sesi_n"
        android:textAlignment="center"
        android:textColor="#E6E2E2"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/musica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonGoogle"
        app:layout_constraintTop_toBottomOf="@+id/idioma"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

